<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grand Blanc High School</string>
    <string name="Home">Home</string>
    <string name="GBHSWeb">Open GBHS Website</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Announce">Announcements</string>
    <string name="Video">Video Announcements</string>
    <string name="Grades">Check Grades</string>
    <string name="studentvue">Open StudentVUE</string>
    <string name="synergy">Open website</string>
    <string name="Twitter">GBHS Twitter</string>
    <string name="Facebook">GBHS Facebook</string>
    <string name="Newsletter">Newsletter</string>
    <string name="Admin">Administration</string>
    <string name="Calendar">District Calendar</string>
    <string name="CalendarWeb">Download Official School Calendar</string>
    <string name="Band">Instrumental Music Department</string>
    <string name="Staff">Staff Listing</string>
    <string name="Alumni">Alumni</string>
    <string name="Athletics">Athletics</string>
    <string name="BAC">BAC/ACC</string>
    <string name="CRC">Career Resource Center</string>
    <string name="CSS">CSS</string>
    <string name="District">District Data</string>
    <string name="Driver">Driver Education</string>
    <string name="Early">Early College</string>
    <string name="ArtCal">Fine Arts Calendar</string>
    <string name="GBCC">GB Community Connections</string>
    <string name="Guidance">Guidance</string>
    <string name="CTE">Career &amp; Technical Education</string>
    <string name="external">External Links</string>
    <string name="Library">Library</string>
    <string name="NHS">National Honor Society</string>
    <string name="PTO">Parents / PTO</string>
    <string name="Faculty">Faculty Resources</string>
    <string name="Student">Student Resources</string>
    <string name="Summer">Summer School</string>
    <string name="Yearbook">Yearbook</string>
    <string name="Banner">Bobcat Banner</string>
    <string name="Power">Grand Blanc Powerlifting</string>
    <string name="NoConnection">No internet connection.</string>
    <string name="NoTwitter">Could not connect to Twitter.\n(Error Code:</string>

    <string name="FacebookWeb">facebook.com/GrandBlancHighSchool</string>
    <string name="TwitterWeb">twitter.com/GrandBlancPride</string>
    <string name="BannerWeb">bobcatbanner.com</string>
    <string name="BandWeb">gbhsinstrumentalmusicdepartment.weebly.com</string>
    <string name="LibraryWeb">gbhlib.weebly.com</string>
    <string name="NewsletterWeb">smore.com/u/peggywray</string>
    <string name="NHSWeb">gbhsnhs.com</string>
    <string name="PowerWeb">sites.google.com/a/grandblancschools.org/grand-blanc-powerlifting/home</string>
    <string name="YearbookWeb">gbyearbook.com</string>

    <string name="schedulemenu">View Daily Schedule</string>
    <string name="schedule">1st Hour:    7:20 – 8:19 (59 minutes)
    \n2nd Hour:    8:25 - 9:23 (58 minutes)
    \n3rd Hour:    9:29 - 10:32 (63 minutes with announcements)
    \n\nA Lunch:    10:32 - 11:02 (class starts at 11:08)
    \nB Lunch:    11:05 - 11:35 (class starts at 11:38)
    \nC Lunch:    11:38 - 12:08
    \n\n4th Hour:   10:38 - 12:08
    \n5th Hour:   12:14 - 1:12 (58 minutes)
    \n6th Hour:    1:18 - 2:15 (58 minutes)
    \n\n***There will be a single tone at 8:16, 9:20, 10:29, 12:05 and 1:09 to release travelers to their next class. All non-traveling students must remain in class until the official end of the period.</string>
    <color name="darkred">#ffcc0000</color>
    <color name="bobcatred">#ff681008</color>

    <string name="facebook_app_id">1552325678377912</string>
    <string name="facebook_secret">dbaa58d5266424b6e25d46d1fbd773d0</string>
    <string name="facebook_access_token">CAACEdEose0cBAC6gCoAVUGskqPZBW77KcnwMZC8v5JBdTbyZAxB6UDnZArTcuZBHukaH6hbFt3EgsuvmcNNjbi7OMLKTPJ1pI12mYPbYP8qr4sJGBWI474azZAqWEREnpqoWYZCrOqNRy4jIwdpVqxBuGe5ZCfm1Qw87n2MddwKTE6UKrb7PqoyFUhLgF8a4qMp2lZCHv3Fcem3nmnlq8KPdvFym6pqlnWLUZD</string>
    <string name="facbeook_app_token">1552325678377912|Uh8QafY5e5mSopY7AYRRNzEsCq0</string>
    <!--TODO: (Aaron) Change to school's facebook ID-->
    <string name="facebook_account_id">1575038112782132</string>

    <string-array name="nameArray">
        <item>"Allswede, Stacy"</item>
        <item>"Katelyn, Anderson"</item>
        <item>"Applebee, Stephen"</item>
        <item>"Arakelyan, Natalya"</item>
        <item>"Arbit, Michael"</item>
        <item>"Babiasz, Todd"</item>
        <item>"Bailey, Brad"</item>
        <item>"Baker, Tami"</item>
        <item>"Barker, Steven"</item>
        <item>"Barnes, Kim"</item>
        <item>"Barnowsky, Nicholas"</item>
        <item>"Bas, Adriana"</item>
        <item>"Bauermeister, Marie"</item>
        <item>"Belcher, Chris"</item>
        <item>"Belill-Lemke, Valerie"</item>
        <item>"Benaway, Karen"</item>
        <item>"Bieda, Sara"</item>
        <item>"Blackett, Patricia"</item>
        <item>"Blakley, Sarah"</item>
        <item>"Blake, Justin"</item>
        <item>"Bleicher, Dana"</item>
        <item>"Botzki, Denise"</item>
        <item>"Bradley, Zachary"</item>
        <item>"Briggs, Tisha"</item>
        <item>"Brunskole, Lori"</item>
        <item>"Bujalski, Courtney"</item>
        <item>"Butzu, Ava"</item>
        <item>"Calo, Ron"</item>
        <item>"Carmody, Charlie"</item>
        <item>"Carney, Chad"</item>
        <item>"Church, Katie"</item>
        <item>"Clark, Daniel"</item>
        <item>"Clark, Matthew"</item>
        <item>"Clement, David"</item>
        <item>"Coffman, Ryan"</item>
        <item>"Cottrill, Amy"</item>
        <item>"Cozad, Colleen"</item>
        <item>"Cuccia, Linda"</item>
        <item>"Davis, Marcia"</item>
        <item>"Delaney, Joseph"</item>
        <item>"Doering, Meagan"</item>
        <item>"Dohm, Jerrod"</item>
        <item>"Dolzynski, Mary"</item>
        <item>"Dunk, Steven"</item>
        <item>"Dunning, Amy"</item>
        <item>"Eickholt, Kiersten"</item>
        <item>"Elias, Elizabeth"</item>
        <item>"Finkbeiner, Jacob"</item>
        <item>"Franzel, Mary"</item>
        <item>"Funsch, Leo"</item>
        <item>"Gardner, Mary"</item>
        <item>"Garey, Stephanie"</item>
        <item>"Gaudet, Karen"</item>
        <item>"Gauthier, Marcia"</item>
        <item>"Gibbs-Halm, Deborah"</item>
        <item>"Giddings, Tonya"</item>
        <item>"Goetzinger, Debbie"</item>
        <item>"Goetzinger, Gary"</item>
        <item>"Gottlieb, Jennifer"</item>
        <item>"Gowdy, Larhonda"</item>
        <item>"Graves, Megan"</item>
        <item>"Green, Al"</item>
        <item>"Grzymkowski, Heather"</item>
        <item>"Gualdoni, Laura"</item>
        <item>"Guerra, Amy"</item>
        <item>"Hahn, Kolette"</item>
        <item>"Hall, Pamela"</item>
        <item>"Hammond, Jennifer"</item>
        <item>"Harr-Smith, Lindsey"</item>
        <item>"Hassenzahl, Beth"</item>
        <item>"Heemsoth, Miranda"</item>
        <item>"Hentes, John"</item>
        <item>"Holt, Denny"</item>
        <item>"Howell, Kathleen"</item>
        <item>"Hubbs, Laura"</item>
        <item>"Hugo, Brian"</item>
        <item>"Hugo, Matt"</item>
        <item>"Hutchison, Cory"</item>
        <item>"Jacobson, Amy"</item>
        <item>"Jacobson, Amy"</item>
        <item>"Johnson, Amy"</item>
        <item>"Johnson, Sarah"</item>
        <item>"Kehn, Bonnie"</item>
        <item>"Keilitz, Kevin"</item>
        <item>"Kenney, Rachel"</item>
        <item>"Kernen, Nicole"</item>
        <item>"King, Irving"</item>
        <item>"Kish, Kaitlyn"</item>
        <item>"Knapp, Don"</item>
        <item>"Knight, Christy"</item>
        <item>"Kufuor, Justin"</item>
        <item>"Larose, Michael"</item>
        <item>"Lawrence, Jenalyn"</item>
        <item>"Lemaster, Thomas"</item>
        <item>"Li, Snow"</item>
        <item>"Londrigan, Aimee"</item>
        <item>"Lund, Elizabeth"</item>
        <item>"Lundy, Andrea"</item>
        <item>"Mareski, Shannon"</item>
        <item>"Mather, Brenda"</item>
        <item>"McCleary, Linda"</item>
        <item>"Melton, Hunter"</item>
        <item>"Melton, Marcie"</item>
        <item>"Messimer, Megan"</item>
        <item>"Meyer, Lindsay"</item>
        <item>"Mitchell, Jeremy"</item>
        <item>"Mol, Phyllis"</item>
        <item>"THING"</item>
        <item>"THING"</item>
        <item>"THING"</item>
        <item>"THING"</item>
        <item>"THING"</item>
        <item>"THING"</item>
        <item>"THING"</item>





    </string-array>
        
</resources>