<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GBHS" >

    <!--For debugging purposes only-->
    <item android:id="@+id/twitter"
        android:title="@+string/Twitter"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/calendar"
        android:title="@+string/Calendar"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/news"
        android:title="@string/News"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Admin"
        android:title="@string/Admin"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Staff"
        android:title="@string/Staff"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Alumni"
        android:title="@string/Alumni"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Athletics"
        android:title="@string/Athletics"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/BAC"
        android:title="@string/BAC"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/CRC"
        android:title="@string/CRC"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/CSS"
        android:title="@string/CSS"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/District"
        android:title="@string/District"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Driver"
        android:title="@string/Driver"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Early"
        android:title="@string/Early"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/ArtCal"
        android:title="@string/ArtCal"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/GBCC"
        android:title="@string/GBCC"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Guidance"
        android:title="@string/Guidance"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/K12CTE"
        android:title="@string/K12CTE"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Library"
        android:title="@string/Library"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/NHS"
        android:title="@string/NHS"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/PTO"
        android:title="@string/PTO"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Bully"
        android:title="@string/Bully"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Faculty"
        android:title="@string/Faculty"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Student"
        android:title="@string/Student"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Summer"
        android:title="@string/Summer"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@string/Yearbook"
        android:title="@string/Yearbook"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
