<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:gravity="center" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.grandblanchs.gbhs.Home">

    <!-- Empty layout (0x0 dp) centered horizontally -->
    <Space android:id="@+id/dummy1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:visibility="invisible"/>

    <!-- Empty layout (0x0 dp) centered vertically -->
    <Space android:id="@+id/dummy2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAnnounce"
        android:drawableLeft="@drawable/announce"
        android:text="@string/Announce"
        android:contentDescription="@string/Announce"
        android:elevation="4dp"
        android:padding="8dp"
        android:drawablePadding="-32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/ColorPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFacebook"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/Facebook"
        android:contentDescription="@string/Facebook"
        android:elevation="4dp"
        android:padding="8dp"
        android:drawablePadding="-8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_below="@+id/btnAnnounce"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dummy2"
        android:layout_alignEnd="@+id/dummy2"
        android:backgroundTint="@color/ColorPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTwitter"
        android:drawableLeft="@drawable/twitter"
        android:text="@string/Twitter"
        android:contentDescription="@string/Twitter"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_below="@+id/btnFacebook"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dummy2"
        android:layout_alignEnd="@+id/dummy2"
        android:backgroundTint="@color/ColorPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalendar"
        android:drawableLeft="@drawable/calendar"
        android:text="@string/Calendar"
        android:contentDescription="@string/Calendar"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_below="@+id/btnTwitter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/dummy2"
        android:layout_alignEnd="@+id/dummy2"
        android:backgroundTint="@color/ColorPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTimes"
        android:drawableLeft="@drawable/clock"
        android:text="@string/Schedule"
        android:contentDescription="@string/Schedule"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_alignTop="@+id/btnFacebook"
        android:layout_alignRight="@+id/btnGrades"
        android:layout_alignEnd="@+id/btnGrades"
        android:layout_toRightOf="@+id/dummy2"
        android:layout_toEndOf="@+id/dummy2"
        android:backgroundTint="@color/ColorPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnGrades"
        android:drawableLeft="@drawable/svueaction"
        android:text="@string/Grades"
        android:contentDescription="@string/Grades"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_alignTop="@+id/btnTwitter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/dummy2"
        android:layout_toEndOf="@+id/dummy2"
        android:backgroundTint="@color/ColorPrimary" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnWeb"
        android:drawableLeft="@drawable/web"
        android:text="@string/GBHSWeb"
        android:contentDescription="@string/GBHSWeb"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_toEndOf="@+id/dummy2"
        android:layout_toRightOf="@+id/dummy2"
        android:layout_alignBottom="@+id/btnCalendar"
        android:backgroundTint="@color/ColorPrimary"
        android:layout_alignTop="@+id/btnCalendar" />

    <ScrollView
        android:id="@+id/scrNotification"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNotification"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:textSize="14sp"
            android:textStyle="bold" />
    </ScrollView>

</RelativeLayout>
